[gd_scene load_steps=2 format=3 uid="uid://byak0mve08axp"]

[ext_resource type="Script" path="res://scripts/file_dialog.gd" id="1_y02vh"]

[node name="FileDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y02vh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -324.0
offset_right = 360.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="FileDialog" type="FileDialog" parent="CanvasLayer/PanelContainer"]
transparent_bg = true
initial_position = 1
size = Vector2i(600, 500)
exclusive = false
unresizable = true
transparent = true
ok_button_text = "Save"
access = 2

[node name="OpenButton" type="Button" parent="CanvasLayer/PanelContainer"]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 592.0
offset_right = 438.0
offset_bottom = 632.0
text = "Open Folder"

[connection signal="canceled" from="CanvasLayer/PanelContainer/FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="close_requested" from="CanvasLayer/PanelContainer/FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="confirmed" from="CanvasLayer/PanelContainer/FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="CanvasLayer/PanelContainer/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/OpenButton" to="." method="_on_open_button_pressed"]
